--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -55,11 +55,10 @@
 18.02 2.1
 线性代数 2.20
 数据结构 3.10
-算法 4.20
-概率论 5.10
-信息论 6.01
-计算机体系结构 6.20
-
+算法与数据结构 4.5
+计组 OS 自动机 5.15 前
+6月前 -> 信息论
+6 月开始-> 第二轮，刷数学题 + 过去问
 
 BG: 江苏大学  通信工程  GPA 2.7/77.8
 北京中厂 2年后端开发
