--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -1,4 +1,4 @@
-2024-06-15 更新
+2025-03-28 更新
 ### 个人信息
 + 张文豪 
 + 男
@@ -20,32 +20,23 @@
 	+ RHCE认证，id:200-161-131；
 	+ 绩点：2.72
 	+ 加权平均分：77.2
-+ CS Learning
-	+ MIT 18.01  Single Variable Calculus
++ CS Self Learning
+	+ MIT 18.01  *Single Variable Calculus*
 		+ begin: 2024.12.10  end: 2025.1.5
-	+ MIT 18.02  Multivariable Calculus
+		+ https://github.com/GUMI-21/MIT18.01_note
+	+ MIT 18.02  *Multivariable Calculus*
 		+ begin: 2025.1.6 end: 2025.1.30
-	+ MIT 18.06 Linear Algebra
+	+ MIT 18.06 *Linear Algebra*
 		+ begin: 2025.2.1 end: 2025.2.18  65 hours
+	+ MIT 6.042J *Mathematics For Computer Science*
+		+ Start: 2025.2.27 End: 2025.3.12   LEC 1 to LEC 15
+		+ https://github.com/GUMI-21/MIT6.042J_note
+	+ MIT 6.006 *Introduction To Algorithms*
+		+ Start: 2025.3.13 END: 2025.4.10 
+		+ https://github.com/GUMI-21/MIT6.006_note
 + Language Learning:
 	+ Japnese 2024.5.10-2024.12.1 N2 120points
 	+ English Toeic 775points 375+400
-### 技术栈
-+ 编程语言：Go，Python，C，php
-+ 技术：熟悉常用数据结构与算法，go语言服务端开发技术栈
-```shell
-- 熟悉Go语言服务端完整开发部署流程，包括Gin框架restful风格开发，grpc微服务架构开发；
-- 熟悉Go语言特性，包括并发控制、抽象接口定义、底层数据结构、goroutine协程等，能够开发多协程并发程序；
-- 熟悉python语言，了解php语言，有python爬虫脚本，phpweb后台服务开发经验；
-- 熟悉Linux环境开发测试调试，包括shell脚本部署，服务日志排查，服务器资源监控等，熟悉常用Linux命令，对nginx/ansible组件有一定了解；
-- 熟悉kafka消息队列的使用，对kafka架构有一定理解，能够运用kafka开发异步处理程序；
-- 熟悉Mysql关系型数据库，熟悉表设计/索引设计，日常工作中使用原生sql进行开发，可以处理一定的sql调优；
-- 熟悉Redis缓存，根据场景使用数据结构，在高并发场景下能够独立设计缓存使用，包括缓存命中率、过期时间设计等；
-- 熟悉tcp/http协议，开发中能够进行抓包debug，理解网络IOS七层模型，对长连接/websocket有一定了解；
-- 熟悉git开发工具，分支/commit管理；
-- 代码风格良好，命名规范，习惯性地写注释，在开发时会考虑代码复用性；
-```
-
 ### 工作经验
 + 2022.07~2024.1.19 北京星制科技（昆仑天工）
 	+ Golang服务端工程师
@@ -55,6 +46,19 @@
 		+  爬取musicbrainz网站音乐元数据，保证爬虫程序长期稳定运行；
 	+ **互娱服务端 23.1~24.1
 		- 主要负责appStarMaker的语音房/直播、送礼、家族每日任务、feed弹窗相关的业务需求开发；
+### 技术栈
++ 编程语言：Go，Python，C，php
++ 技术：熟悉常用数据结构与算法，go语言服务端开发技术栈
++ -熟悉Go语言服务端完整开发部署流程，包括Gin框架restful风格开发，grpc微服务架构开发；
+- 熟悉Go语言特性，包括并发控制、抽象接口定义、底层数据结构、goroutine协程等，能够开发多协程并发程序；
+- 熟悉python语言，了解php语言，有python爬虫脚本，phpweb后台服务开发经验；
+- 熟悉Linux环境开发测试调试，包括shell脚本部署，服务日志排查，服务器资源监控等，熟悉常用Linux命令，对nginx/ansible组件有一定了解；
+- 熟悉kafka消息队列的使用，对kafka架构有一定理解，能够运用kafka开发异步处理程序；
+- 熟悉Mysql关系型数据库，熟悉表设计/索引设计，日常工作中使用原生sql进行开发，可以处理一定的sql调优；
+- 熟悉Redis缓存，根据场景使用数据结构，在高并发场景下能够独立设计缓存使用，包括缓存命中率、过期时间设计等；
+- 熟悉tcp/http协议，开发中能够进行抓包debug，理解网络IOS七层模型，对长连接/websocket有一定了解；
+- 熟悉git开发工具，分支/commit管理；
+- 代码风格良好，命名规范，习惯性地写注释，在开发时会考虑代码复用性；
 ### 项目经验
 - **app主页弹窗聚合**
 - 服务端开发
@@ -76,11 +80,10 @@
 ### 兴趣爱好
 + 动画
 	+ 少年漫，剧情向爱好
-	+ Fate系列老粉
 + 游戏
 	+ 网游：炉石传说多赛季传说，APEX多赛季钻石，LOL最高段位钻石
 	+ 单机：JRPG，ARPG爱好者；魂系，最终幻想，八方旅人，P系列
 + 漫画
-	+ 剑风传奇、海盗战记、咒术回战
+	+ 剑风传奇、海盗战记
 + 其他技能
 	+ 围棋、视频剪辑
