--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -22,18 +22,20 @@
 	+ 加权平均分：77.2
 + CS Self Learning
 	+ MIT 18.01  *Single Variable Calculus*
-		+ begin: 2024.12.10  end: 2025.1.5
+		+ Start: 2024.12.10  End: 2025.1.5
 		+ https://github.com/GUMI-21/MIT18.01_note
 	+ MIT 18.02  *Multivariable Calculus*
-		+ begin: 2025.1.6 end: 2025.1.30
+		+ Start: 2025.1.6 End: 2025.1.30
 	+ MIT 18.06 *Linear Algebra*
-		+ begin: 2025.2.1 end: 2025.2.18  65 hours
+		+ Start: 2025.2.1 End: 2025.2.18  65 hours
 	+ MIT 6.042J *Mathematics For Computer Science*
 		+ Start: 2025.2.27 End: 2025.3.12   LEC 1 to LEC 15
 		+ https://github.com/GUMI-21/MIT6.042J_note
 	+ MIT 6.006 *Introduction To Algorithms*
-		+ Start: 2025.3.13 END: 2025.4.10 
+		+ Start: 2025.3.13 End: 2025.4.10 
 		+ https://github.com/GUMI-21/MIT6.006_note
+	+ Harbin Institute of Technology *Formal Language and Automata*
+		+ Start:  2025.4.16
 + Language Learning:
 	+ Japnese 2024.5.10-2024.12.1 N2 120points
 	+ English Toeic 775points 375+400
