--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -4,6 +4,22 @@
 + ~~托业  775  学习时间7月-9月 （2个月准备）~~
 + 专业课
 
+----
+4.29 -> TODO LIST
+微积分
+线性代数
+复变函数
+微分方程
+
+数据结构与算法
+自动机
+信息论
+计组（备选）
+
+----
+
+
+
 京大知能：
 必选：
 **线性代数、微分积分，アルゴリズムとデータ構造（数据结构、算法）**
