--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -35,7 +35,8 @@
 		+ Start: 2025.3.13 End: 2025.4.10 
 		+ https://github.com/GUMI-21/MIT6.006_note
 	+ Harbin Institute of Technology *Formal Language and Automata*
-		+ Start:  2025.4.16
+		+ Start:  2025.4.16 - 4.30
+	+ 
 + Language Learning:
 	+ Japnese 2024.5.10-2024.12.1 N2 120points
 	+ English Toeic 775points 375+400
