--- a/修士/出愿汇总/九州大学/九大.md
+++ b/修士/出愿汇总/九州大学/九大.md
@@ -1,7 +1,7 @@
 出愿资格3
 
 ### 出愿
-本学府所定の様式は本学府 Web サイト（ https://www.isee.kyushu-u.ac.jp/ ） より入手できる。郵送による場合は，必ず書留郵便とし，封筒表面に「大学院システム情報科学府修士課程入 学願書」と朱書すること。郵送の場合も受付期間内に必着のこと。
+本学府所定の様式は本学府 Web サイト（ https://www.isee.kyushu-u.ac.jp/ ） より入手できる。郵送による場合は，必ず*書留郵便*とし，封筒表面に「大学院システム情報科学府修士課程入 学願書」と朱書すること。郵送の場合も受付期間内に必着のこと。
 （あて先） 九州大学工学部等教務課教務係 〒819－0395 福岡市西区元岡 744 TEL（092）802－2723
 ```
 一般試験受験希望者で外国の大学を卒業（見込み）の者は，原則 令和 7(2025)年 5 月 30 日（金）までに九 州大学プレアドミッション・サポートデスク（以下，PSD）に必ず出願前支援申請を行い，希望指導教員から 事前に出願可の了承を得たうえで，出願すること。（ただし，本学大学院システム情報科学府に研究生として 在籍中の者は対象外とする。）なお，教員より出願可の了承を得ていない者の出願は認めない。また，特別試 験受験希望者においては，PSD 審査を課さないが，出身大学問わず必ず希望指導教員にメール等で連絡を取 り，出願についての同意を得ること。 PSD での事前審査は入学後の研究室（指導教員）を決定するものではないので留意すること。 2 また願書には PSD アカウント ID 番号および，出願可の連絡を受けた日，出願可となった指導教員の氏名を 必ず記載すること。 プレアドミッションサポートシステム（PSD）の詳細については，以下の URL を参照すること。なお，以 下の URL に掲載されている PSD アドミッションサポートの流れでは，出願可否の判断は教員とコンタクト した後に教員が行うことになっているが，システム情報科学府では教員とコンタクトすることなく PSD に提 出された書類などに基づいて出願可否の判断を行うので留意すること。 
