常微分方程

--- a/修士/出愿汇总/京都大学/京大.md
+++ b/修士/出愿汇总/京都大学/京大.md
@@ -1,1 +1,20 @@
-（２）郵送の場合 受付期間：２０２５年６月４日（水）～１７日（火）午後５時（必着） 提出先：〒606-8501 京都市左京区吉田本町 京都大学大学院情報学研究科教務掛 TEL (075)753-4894,5500
+知-10
+郵送の場合 受付期間：２０２５年６月４日（水）～１７日（火）午後５時（必着） 提出先：〒606-8501 京都市左京区吉田本町 京都大学大学院情報学研究科教務掛 TEL (075)753-4894,5500
+
+### Materials
+
+1. Application Form for Admission/Photograp h Form/Examination Form
+2. ~~Transcript~~ 
+3. Statement of Personal Objectives
+4. ~~Residence Card or Photocopy of Passport~~
+5. Evidence of Payment of Application Fee
+~~8.Address Label A~~
+~~9.Address Label B~~
+~~10.Address Label C~~
+14.Evidence of English Proficiency (copy of toeeic)
+
+TODO:
+1.拍照片 - 4 x 3 贴在 1 上
+2.Statement of Personal Objectives
+3. 6月4日 付款
+4. 复印托业成绩单
