--- a/修士/出愿汇总/九州大学/九大.md
+++ b/修士/出愿汇总/九州大学/九大.md
@@ -1,4 +1,16 @@
 出愿资格3
+### 材料
+1.入学愿书
+2.履历
+3.昭和票/ 受验票
+~~4.成绩证明书~~
+~~5.卒业证明书~~
+~~6.学士学位证明书~~
+7.反信用封筒
+8.住所票
+9.入学鉴定料证明书类
+~~12.英语资格试验证书~~
+~~13.在留卡、护照复印件~~
 
 ### 出愿
 本学府所定の様式は本学府 Web サイト（ https://www.isee.kyushu-u.ac.jp/ ） より入手できる。郵送による場合は，必ず*書留郵便*とし，封筒表面に「大学院システム情報科学府修士課程入 学願書」と朱書すること。郵送の場合も受付期間内に必着のこと。
