--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -94,3 +94,19 @@ Japanese 10.1-12.1 N2 120
 线性代数  MIT18.06  2.1-2.18  （unit3 比较难 学的不太扎实）
 
 
+1.all in 9大
+微积分 线代 复变 微分方程 向量解析
++算法 自动机 计组 信息论
+-> 弱点克服线代
+-> 算法导论
+-> 自动机黑书
+-> 计组、数电
+-> 信息论
+
+2.all in 京大
+微积分 线代 算法
+自动机 信息论
+-> 小黄书线代
+-> 算法导论
+-> 自动机
+-> 概率论概览 + 信息论黑书课件
